Corrections to enable starting sorcer services using rio - still problems with blitz

--- a/configs/blitz/configs/blitz.config
+++ b/configs/blitz/configs/blitz.config
@@ -20,17 +20,26 @@ import org.dancres.blitz.config.Transient;
 
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
-import org.dancres.blitz.serviceui.DashboardUI;
-
+//import org.dancres.blitz.serviceui.DashboardUI;
+import org.rioproject.entry.UIDescriptorFactory;
+import org.rioproject.serviceui.UIFrameFactory;
+import net.jini.lookup.ui.MainUI;
+import java.net.URL;
 
 import sorcer.core.SorcerConstants;
 import sorcer.core.SorcerEnv;
 
 org.dancres.blitz {
 	home = System.getProperty(SorcerConstants.S_BLITZ_HOME, "${sorcer.home}/databases");
-    initialAttrs = new Entry[]
-            {org.dancres.blitz.serviceui.DashboardUI.getUIDescriptor(),
-            new Comment("Host: " + SorcerEnv.getHostName())};
+
+    initialAttrs = new Entry[] {
+        UIDescriptorFactory.getUIDescriptor(MainUI.ROLE, new UIFrameFactory(new URL("artifact:org.dancres.blitz:blitz-ui:2.2.0"), "org.dancres.blitz.tools.dash.DashBoardFrame")),
+        new Comment("Host: " + SorcerEnv.getHostName())
+    };
+
+    //initialAttrs = new Entry[]
+    //        {org.dancres.blitz.serviceui.DashboardUI.getUIDescriptor(),
+    //        new Comment("Host: " + SorcerEnv.getHostName())};
             
     // Default Stats to make available
     stats = new Switch[] {new OpSwitch(OpSwitch.ALL_TYPES,
