--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -90,16 +90,23 @@ com.sun.jini.start {
    		// Blitz
         new SorcerServiceDescriptor(
             Booter.resolveCodebase(new String[]{
-                "org.dancres.blitz:blitz-dl",
- 			    "org.dancres.blitz:blitzui"
+                "org.dancres.blitz:blitz-common",
+                "org.dancres.blitz:blitz-proxy",
+                "org.apache.river:outrigger-dl",
+                //"org.dancres.blitz:blitz-dl",
+ 			    "org.dancres.blitz:blitz-ui"
             }),
             policy,
             Booter.resolveClasspath(new String[]{
-            	"org.dancres.blitz:blitz",
-            	"org.dancres.blitz:blitzui",
+                "org.dancres.blitz:blitz-common",
+                "org.dancres.blitz:blitz-service",
+                "org.dancres.blitz:blitz-proxy",
+            	//"org.dancres.blitz:blitz",
+            	"org.dancres.blitz:blitz-ui",
             	"com.sleepycat:je",
             	"net.jini.lookup:serviceui",
             	"org.apache.river:outrigger-dl",
+            	"net.jini:jsk-lib",
             	"net.jini:jsk-platform"
             }),
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
