--- a/sos-providers/logger/logger-prv/pom.xml
+++ b/sos-providers/logger/logger-prv/pom.xml
@@ -20,6 +20,16 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>commons-prv</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>logger-sui</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
