Sorcer now boots with rio, ex6-provider as well but requestors don't work

--- a/configs/jini/configs/mahalo-boot.config
+++ b/configs/jini/configs/mahalo-boot.config
@@ -6,7 +6,6 @@ import net.jini.lookup.entry.*;
 
 import com.sun.jini.config.ConfigUtil;
 import java.util.Arrays;
-import sorcer.provider.boot.Booter;
 import sorcer.core.SorcerEnv;
 
 com.sun.jini.mahalo {
@@ -22,5 +21,5 @@ com.sun.jini.mahalo {
     //initialLookupLocators
     //initialUnicastDiscoveryPort
    
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
 }
