--- a/configs/jini/configs/outrigger-boot.config
+++ b/configs/jini/configs/outrigger-boot.config
@@ -6,7 +6,6 @@ import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 
 import java.util.Arrays;
-import sorcer.provider.boot.Booter;
 import sorcer.core.SorcerEnv;
 
 com.sun.jini.outrigger {
@@ -22,5 +21,5 @@ com.sun.jini.outrigger {
     //initialLookupLocators
     //initialUnicastDiscoveryPort
    
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
 }
