--- a/configs/jini/configs/outrigger.config
+++ b/configs/jini/configs/outrigger.config
@@ -3,7 +3,6 @@ import net.jini.jeri.BasicILFactory;
 import net.jini.jeri.BasicJeriExporter;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
-import sorcer.provider.boot.Booter;
 import sorcer.core.SorcerEnv;
 
 com.sun.jini.outrigger {
@@ -11,5 +10,5 @@ com.sun.jini.outrigger {
     hostName = Booter.getHostName();
     name = SorcerEnv.getActualName("Exert Space");
     initialLookupAttributes = new Entry[] { new Name(name), new Comment(hostName) };
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
 }
