--- a/configs/shell/configs/nsh-start.config
+++ b/configs/shell/configs/nsh-start.config
@@ -37,6 +37,7 @@
     # Needed to interpret netlet scripts
     load mvn://org.sorcersoft.sorcer:sos-api
     load mvn://org.sorcersoft.sorcer:dbp-api
+    #load mvn://org.rioproject:rio-platform
 
     # load user specific libraries
     load file://!{user.home}/.nsh/lib/*.jar
