--- a/configs/jini/configs/jiniservices.config
+++ b/configs/jini/configs/jiniservices.config
@@ -3,11 +3,9 @@ import net.jini.jeri.BasicILFactory;
 import net.jini.jeri.BasicJeriExporter;
 import com.sun.jini.config.ConfigUtil;
 
-import sorcer.provider.boot.Booter;
-
 root {
   	groups = SorcerEnv.getGroups();
-  	host = Booter.getHostAddress();
+  	host = SorcerEnv.getHostAddress();
 }
 
 com.sun.jini.reggie {
