--- a/configs/jini/configs/reggie-boot.config
+++ b/configs/jini/configs/reggie-boot.config
@@ -6,13 +6,12 @@ import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 
 import java.util.Arrays;
-import sorcer.provider.boot.Booter;
 import sorcer.core.SorcerEnv;
 
 com.sun.jini.reggie {
     name = SorcerEnv.getActualName("Service Registry");
     initialMemberGroups = SorcerEnv.getLookupGroups();
-    hostName = Booter.getHostName();
+    hostName = SorcerEnv.getHostName();
     initialLookupAttributes = new Entry[] { new Name(name), 
     	new Comment("member group:" + Arrays.toString(initialMemberGroups)), 
     	new Comment("host:" + hostName), 
@@ -21,5 +20,5 @@ com.sun.jini.reggie {
     //initialLookupLocators
     //initialUnicastDiscoveryPort
    
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
 }
