--- a/configs/jini/configs/reggie.config
+++ b/configs/jini/configs/reggie.config
@@ -3,19 +3,17 @@ import net.jini.jeri.BasicILFactory;
 import net.jini.jeri.BasicJeriExporter;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
-import sorcer.provider.boot.Booter;
 import sorcer.core.SorcerEnv;
 
 com.sun.jini.reggie {
     name = SorcerEnv.getActualName("Service Registry");
     initialMemberGroups = SorcerEnv.getLookupGroups();
-    //hostName = Booter.getHostName();
-    hostName = Booter.getHostAddress();
+    hostName = SorcerEnv.getHostAddress();
     initialLookupAttributes = new Entry[] { new Name(name), new Comment(hostName) };
     //initialLookupLocators
     //initialUnicastDiscoveryPort
    
 //    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
 
 }
