--- a/configs/sos-providers/cataloger.config
+++ b/configs/sos-providers/cataloger.config
@@ -4,8 +4,6 @@ import net.jini.jeri.tcp.*;
 import net.jini.core.entry.*;
 import net.jini.lookup.entry.*;
 import sorcer.core.*;
-import sorcer.provider.boot.Booter;
-
 
 sorcer.core.provider.ServiceProvider  {
 		name = "Cataloger";
@@ -20,7 +18,7 @@ sorcer.core.provider.ServiceProvider  {
 
         // if not declared the default exporter is BasicJeriExporter
         // exporter = new JrmpExporter(0);
-         exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+         exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
         
          iconName="sorcer-ico.png";
 }
