--- a/configs/sos-providers/dbp.config
+++ b/configs/sos-providers/dbp.config
@@ -8,7 +8,6 @@ import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.service.*;
 import sorcer.util.*;
-import sorcer.provider.boot.Booter;
 
 sorcer.core.provider.ServiceProvider {
     // application-specific service provider properties
@@ -27,7 +26,7 @@ sorcer.core.provider.ServiceProvider {
     
     // if not declared the default exporter is BasicJeriExporter
     //exporter = new JrmpExporter(0);
-    exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+    exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
     
     spaceEnabled = false;
     		
