--- a/configs/sos-providers/spacer.config
+++ b/configs/sos-providers/spacer.config
@@ -7,8 +7,6 @@ import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 
-import sorcer.provider.boot.Booter;
-
 sorcer.core.provider.ServiceProvider {
     // service provider properties
     //properties = "../configs/spacer-prv.properties";
@@ -23,7 +21,7 @@ sorcer.core.provider.ServiceProvider {
 		
     // if not declared the default exporter is BasicJeriExporter
     //exporter = new JrmpExporter(0);
-    exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+    exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
     
     //Exertion Space (JavaSpaces configuration)
     spaceEnabled = false;
