Added missing rio resolver jars

--- a/examples/ex6/ex6-req/pom.xml
+++ b/examples/ex6/ex6-req/pom.xml
@@ -20,8 +20,12 @@
         <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio-platform</artifactId>
-            <version>${v.rio}</version>
         </dependency>
+        <!--        <dependency>
+                    <groupId>org.rioproject</groupId>
+                    <artifactId>rio-platform</artifactId>
+                    <version>${v.rio}</version>
+                </dependency>-->
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>ex6-api</artifactId>
