switch to org.sorcersoft.blitz

--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -90,19 +90,19 @@ com.sun.jini.start {
    		// Blitz
         new SorcerServiceDescriptor(
             Booter.resolveCodebase(new String[]{
-                "org.dancres.blitz:blitz-common",
-                "org.dancres.blitz:blitz-proxy",
+                "org.sorcersoft.blitz:blitz-common",
+                "org.sorcersoft.blitz:blitz-proxy",
                 "org.apache.river:outrigger-dl",
-                //"org.dancres.blitz:blitz-dl",
- 			    "org.dancres.blitz:blitz-ui"
+                //"org.sorcersoft.blitz:blitz-dl",
+ 			    "org.sorcersoft.blitz:blitz-ui"
             }),
             policy,
             Booter.resolveClasspath(new String[]{
-                "org.dancres.blitz:blitz-common",
-                "org.dancres.blitz:blitz-service",
-                "org.dancres.blitz:blitz-proxy",
-            	//"org.dancres.blitz:blitz",
-            	"org.dancres.blitz:blitz-ui",
+                "org.sorcersoft.blitz:blitz-common",
+                "org.sorcersoft.blitz:blitz-service",
+                "org.sorcersoft.blitz:blitz-proxy",
+            	//"org.sorcersoft.blitz:blitz",
+            	"org.sorcersoft.blitz:blitz-ui",
             	"com.sleepycat:je",
             	"net.jini.lookup:serviceui",
             	"org.apache.river:outrigger-dl",
