--- a/sos/sos-env/src/main/resources/META-INF/maven/versions.properties
+++ b/sos/sos-env/src/main/resources/META-INF/maven/versions.properties
@@ -2,7 +2,7 @@
 net.jini = ${v.jini}
 net.jini.lookup = ${v.jini}
 org.apache.river = ${v.jini}
-org.dancres.blitz = ${v.blitz}
+org.sorcersoft.blitz = ${v.blitz}
 org.sorcersoft.sigar = ${v.sigar}
 org.rioproject = ${v.rio}
 org.rioproject.resolver = ${v.rio}
