--- a/sos/commons-prv/pom.xml
+++ b/sos/commons-prv/pom.xml
@@ -15,6 +15,7 @@
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-platform</artifactId>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>net.jini</groupId>
