[ARCHETYPE] migrate to slf4j - fix #48; move UIDescriptor entry to config; upgrade sorcer to M2-SNAPSHOT

--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/pom.xml
@@ -19,12 +19,23 @@
 			<artifactId>commons-prv</artifactId>
 			<version>${v.sorcer}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
 
-		<!-- CodeBase -->
+        <!-- CodeBase -->
 		<dependency>
 			<groupId>${groupId}</groupId>
 			<artifactId>${rootArtifactId}-proxy</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-	</dependencies>
+
+        <!-- tests -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+        </dependency>
+
+    </dependencies>
 </project>
