--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/config/services.config
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/config/services.config
@@ -16,14 +16,11 @@ com.sun.jini.start {
 
 		new SorcerServiceDescriptor(
 			Booter.resolveCodebase(new String[]{
-				"${groupId}:${rootArtifactId}-api:${version}",
-			    "${groupId}:${rootArtifactId}-sui:${version}",
-				"org.sorcersoft.sorcer:sos-platform"
+				"${groupId}:${rootArtifactId}-api:${version}"
 			}),
 			policy,
 			Booter.resolveClasspath(new String[]{
 				"${groupId}:${rootArtifactId}-api:${version}",
-			    "${groupId}:${rootArtifactId}-sui:${version}",
 				"${groupId}:${rootArtifactId}-prv:${version}"
 			}),
 			"sorcer.core.provider.ServiceTasker",
