--- a/tools/provider-root/pom.xml
+++ b/tools/provider-root/pom.xml
@@ -50,6 +50,16 @@
                 <artifactId>sos-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${v.slf4j}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>${v.slf4j}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
