--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-req/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-req/pom.xml
@@ -22,5 +22,13 @@
             <artifactId>commons-req</artifactId>
             <version>${v.sorcer}</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+        </dependency>
 	</dependencies>
 </project>
