--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-sui/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-sui/pom.xml
@@ -21,5 +21,9 @@
             <artifactId>serviceui</artifactId>
             <version>2.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
 	</dependencies>
 </project>
