change version to 1.0-M2

--- a/examples/first/first-prv/src/main/resources/config/services.config
+++ b/examples/first/first-prv/src/main/resources/config/services.config
@@ -8,15 +8,15 @@ com.sun.jini.start {
 	serviceDescriptors = new ServiceDescriptor[] {
 		new SorcerServiceDescriptor(
 			Booter.resolveCodebase(new String[]{
-                "com.example.sorcer:first-api:1.0-M2-SNAPSHOT",
-                "com.example.sorcer:first-sui:1.0-M2-SNAPSHOT",
+                "com.example.sorcer:first-api:1.0-M2",
+                "com.example.sorcer:first-sui:1.0-M2",
                 "org.sorcersoft.sorcer:sos-platform"
             }),
 			policy,
 			Booter.resolveClasspath(new String[]{
-                "com.example.sorcer:first-api:1.0-M2-SNAPSHOT",
-                "com.example.sorcer:first-prv:1.0-M2-SNAPSHOT",
-                "com.example.sorcer:first-sui:1.0-M2-SNAPSHOT"
+                "com.example.sorcer:first-api:1.0-M2",
+                "com.example.sorcer:first-prv:1.0-M2",
+                "com.example.sorcer:first-sui:1.0-M2"
             }),
 			"sorcer.core.provider.ServiceTasker",
 			new String[] { "classpath:/config/SampleService.config" }
