--- a/examples/ex5/ex5-req/pom.xml
+++ b/examples/ex5/ex5-req/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<artifactId>ex5</artifactId>
-		<version>1.0-M2-SNAPSHOT</version>
+		<version>1.0-M2</version>
 	</parent>
 
 	<artifactId>ex5-req</artifactId>
