--- a/examples/ex6/ex6-sui/pom.xml
+++ b/examples/ex6/ex6-sui/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>ex6</artifactId>
-        <version>1.0-M2-SNAPSHOT</version>
+        <version>1.0-M2</version>
     </parent>
 
     <artifactId>ex6-sui</artifactId>
