--- a/examples/first/first-prv/pom.xml
+++ b/examples/first/first-prv/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
     <artifactId>first</artifactId>
     <groupId>com.example.sorcer</groupId>
-    <version>1.0-M2-SNAPSHOT</version>
+    <version>1.0-M2</version>
   </parent>
 
 	<artifactId>first-prv</artifactId>
