--- a/sos-providers/exerter/exerter-prv/pom.xml
+++ b/sos-providers/exerter/exerter-prv/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<artifactId>exerter</artifactId>
-		<version>1.0-M2-SNAPSHOT</version>
+		<version>1.0-M2</version>
 	</parent>
 
 	<artifactId>exerter-prv</artifactId>
