--- a/sos-providers/spacer/spacer-prv/pom.xml
+++ b/sos-providers/spacer/spacer-prv/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<artifactId>spacer</artifactId>
-		<version>1.0-M2-SNAPSHOT</version>
+		<version>1.0-M2</version>
 	</parent>
 
 	<artifactId>spacer-prv</artifactId>
