--- a/sos/commons-req/pom.xml
+++ b/sos/commons-req/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>sos</artifactId>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<version>1.0-M2-SNAPSHOT</version>
+		<version>1.0-M2</version>
 	</parent>
 
 	<artifactId>commons-req</artifactId>
