--- a/tests/ju-arithmetic/pom.xml
+++ b/tests/ju-arithmetic/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<artifactId>tests</artifactId>
-		<version>1.0-M2-SNAPSHOT</version>
+		<version>1.0-M2</version>
 	</parent>
 
 	<packaging>pom</packaging>
