--- a/tools/sos-boot/pom.xml
+++ b/tools/sos-boot/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>tools</artifactId>
-		<version>1.0-M2-SNAPSHOT</version>
+		<version>1.0-M2</version>
 	</parent>
 
     <artifactId>sos-boot</artifactId>
