--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -92,6 +92,7 @@ com.sun.jini.start {
             Booter.resolveCodebase(new String[]{
                 "org.sorcersoft.blitz:blitz-common",
                 "org.sorcersoft.blitz:blitz-proxy",
+                "net.jini.lookup:jmx-lookup",
                 "org.apache.river:outrigger-dl",
                 //"org.sorcersoft.blitz:blitz-dl",
  			    "org.sorcersoft.blitz:blitz-ui"
@@ -103,9 +104,10 @@ com.sun.jini.start {
                 "org.sorcersoft.blitz:blitz-proxy",
             	//"org.sorcersoft.blitz:blitz",
             	"org.sorcersoft.blitz:blitz-ui",
-            	"com.sleepycat:je",
-            	"net.jini.lookup:serviceui",
             	"org.apache.river:outrigger-dl",
+            	"com.sleepycat:je",
+                "net.jini.lookup:jmx-lookup",
+            	"net.jini.lookup:serviceui",
             	"net.jini:jsk-lib",
             	"net.jini:jsk-platform"
             }),
