--- a/examples/ex0/ex0-prv/src/main/resources/config/HelloWorld.config
+++ b/examples/ex0/ex0-prv/src/main/resources/config/HelloWorld.config
@@ -9,7 +9,11 @@ import sorcer.core.*;
 import sorcer.jini.jeri.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
-import sorcer.ex0.HelloWorldImplUI;
+import net.jini.lookup.ui.MainUI;
+import sorcer.ui.serviceui.UIComponentFactory;
+import sorcer.ui.serviceui.UIDescriptorFactory;
+import java.net.URL;
+//import sorcer.ex0.HelloWorldImplUI;
 
 sorcer.core.provider.ServiceProvider {
 	/* service provider generic properties */
@@ -21,7 +25,7 @@ sorcer.core.provider.ServiceProvider {
 	iconName="/config/sorcer.png";
 
 	entries = new Entry[] {
-        HelloWorldImplUI.getUIDescriptor()
+	    UIDescriptorFactory.getUIDescriptor(MainUI.ROLE, new UIComponentFactory(new URL("artifact:org.sorcersoft.sorcer:ex0-sui:1.0-M2-SNAPSHOT"), "sorcer.ex0.HelloWorldImplUI"))
     };
 
 	monitorEnabled = false;
