--- a/configs/jini/configs/fiddler.config
+++ b/configs/jini/configs/fiddler.config
@@ -7,7 +7,7 @@ import sorcer.core.SorcerEnv;
 
 com.sun.jini.fiddler {
     initialLookupGroups = SorcerEnv.getLookupGroups();
-    hostName = Booter.getHostName();
+    hostName = SorcerEnv.getHostName();
     name = SorcerEnv.getActualName("Lookup Discovery Service");
     initialLookupAttributes = new Entry[] { new Name(name), new Comment(hostName) };
     serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
