--- a/examples/ex0/pom.xml
+++ b/examples/ex0/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <version>1.0-M2</version>
+        <version>1.0-M3-SNAPSHOT</version>
         <artifactId>examples</artifactId>
     </parent>
 
@@ -14,7 +14,7 @@
 	<description>HelloWorld Service</description>
 
 	<properties>
-		<v.sorcer>1.0-M2</v.sorcer>
+		<v.sorcer>1.0-M3-SNAPSHOT</v.sorcer>
 	</properties>
 
 	<modules>
