--- a/examples/ex1/pom.xml
+++ b/examples/ex1/pom.xml
@@ -4,7 +4,7 @@
 
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<version>1.0-M2</version>
+		<version>1.0-M3-SNAPSHOT</version>
 		<artifactId>examples</artifactId>
 	</parent>
 
