--- a/examples/first/first-proxy/pom.xml
+++ b/examples/first/first-proxy/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
     <artifactId>first</artifactId>
     <groupId>com.example.sorcer</groupId>
-    <version>1.0-M2</version>
+    <version>1.0-M3-SNAPSHOT</version>
   </parent>
 
 	<artifactId>first-proxy</artifactId>
