--- a/sos-providers/cataloger/cataloger-api/pom.xml
+++ b/sos-providers/cataloger/cataloger-api/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>cataloger</artifactId>
-        <version>1.0-M2</version>
+        <version>1.0-M3-SNAPSHOT</version>
     </parent>
 
     <artifactId>cataloger-api</artifactId>
