--- a/sos-providers/cataloger/cataloger-prv/pom.xml
+++ b/sos-providers/cataloger/cataloger-prv/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
         <artifactId>cataloger</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <version>1.0-M2</version>
+        <version>1.0-M3-SNAPSHOT</version>
     </parent>
 
 	<artifactId>cataloger-prv</artifactId>
