--- a/sos-providers/exertmonitor/exertmonitor-prv/pom.xml
+++ b/sos-providers/exertmonitor/exertmonitor-prv/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<artifactId>exertmonitor</artifactId>
-		<version>1.0-M2</version>
+		<version>1.0-M3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>exertmonitor-prv</artifactId>
