--- a/sos-providers/logger/pom.xml
+++ b/sos-providers/logger/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<artifactId>sos-providers</artifactId>
-		<version>1.0-M2</version>
+		<version>1.0-M3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>logger</artifactId>
