--- a/tools/sorcer-maven-plugin/src/it/simple-it/pom.xml
+++ b/tools/sorcer-maven-plugin/src/it/simple-it/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.sorcersoft.sorcer.it</groupId>
 	<artifactId>simple-it</artifactId>
-	<version>1.0-M2</version>
+	<version>1.0-M3-SNAPSHOT</version>
 
 	<description>A simple IT verifying the basic use case.</description>
 
@@ -18,7 +18,7 @@
 			<plugin>
 				<groupId>org.sorcersoft.sorcer</groupId>
 				<artifactId>sorcer-maven-plugin</artifactId>
-				<version>1.0-M2</version>
+				<version>1.0-M3-SNAPSHOT</version>
 				<goals>
 					<goal>sorcer</goal>
 				</goals>
