Fixed type of default UI in archetype's config

--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/config/__providerInterface__.config
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/config/__providerInterface__.config
@@ -27,7 +27,7 @@ sorcer.core.provider.ServiceProvider {
 	entries = new Entry[] {
 		UIDescriptorFactory.getUIDescriptor(
 			MainUI.ROLE,
-			new UIFrameFactory(
+			new UIComponentFactory(
 				new URL(Booter.resolveCodebase("${package}:${rootArtifactId}-sui:${version}")),
 			 	"${package}.${providerClass}UI"
 			)
