Fixed distro management in provider-root - needed for site deploy

--- a/tools/provider-root/pom.xml
+++ b/tools/provider-root/pom.xml
@@ -63,6 +63,13 @@
         </dependencies>
     </dependencyManagement>
 
+    <distributionManagement>
+        <site>
+            <id>hashnot</id>
+            <url>file://${siteDeployDir}</url>
+        </site>
+    </distributionManagement>
+
     <build>
         <pluginManagement>
             <plugins>
