[pom] add rio services to dependencies pom

--- a/tools/dependencies/pom.xml
+++ b/tools/dependencies/pom.xml
@@ -165,5 +165,15 @@
             <artifactId>rio-ui</artifactId>
             <version>${v.rio}</version>
         </dependency>
+        <dependency>
+            <groupId>org.rioproject.monitor</groupId>
+            <artifactId>monitor-service</artifactId>
+            <version>${v.rio}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.rioproject.cybernode</groupId>
+            <artifactId>cybernode-service</artifactId>
+            <version>${v.rio}</version>
+        </dependency>
     </dependencies>
 </project>
