move dbp interfaces to dbp-api

--- a/tools/sos-shell/pom.xml
+++ b/tools/sos-shell/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>sos-webster</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>dbp-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
