--- a/sos-providers/dbp/dbp-api/pom.xml
+++ b/sos-providers/dbp/dbp-api/pom.xml
@@ -12,5 +12,12 @@
 
     <artifactId>dbp-api</artifactId>
 
-    
+    <dependencies>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
