fix config related to moving DatabaseStorer; add error logging in ProviderDelegate; remove unused dependency on Cataloger from ExertionDispatcherFactory

--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -193,7 +193,10 @@ com.sun.jini.start {
        			
         // SORCER Database Store Service
         new SorcerServiceDescriptor(
-            standardProviderCodebase,
+            Booter.resolveCodebase(new String[]{
+				"org.sorcersoft.sorcer:sorcer-api",
+				"org.sorcersoft.sorcer:dbp-api"
+			}),
             policy,
             Booter.resolveClasspath(new String[]{
                 "org.sorcersoft.sorcer:commons-prv",
