Sorcer now starts over rio and services maybe deployed and undeployed many times - rio is fixed and updated to 5.0-M4_sorcer1

--- a/tools/dependencies/pom.xml
+++ b/tools/dependencies/pom.xml
@@ -166,6 +166,11 @@
             <version>${v.rio}</version>
         </dependency>
         <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio-api</artifactId>
+            <version>${v.rio}</version>
+        </dependency>
+        <dependency>
             <groupId>org.rioproject.monitor</groupId>
             <artifactId>monitor-service</artifactId>
             <version>${v.rio}</version>
