fixes #49 fix caching in SpaceAccessor; ProviderDelegate: bring back the default value of serverExporter

--- a/configs/blitz/configs/start-blitz-all.config
+++ b/configs/blitz/configs/start-blitz-all.config
@@ -1,13 +1,7 @@
 import com.sun.jini.start.ServiceDescriptor;
-import com.sun.jini.start.NonActivatableServiceDescriptor;
-import com.sun.jini.config.ConfigUtil;
-
 
 import sorcer.provider.boot.Booter;
-import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
-import sorcer.resolver.Resolver;
-import sorcer.core.SorcerEnv;
 
 // Starts up Blitz in non-activatable mode with an embedded httpd to save
 // starting it up separately from the command-line. 
@@ -19,35 +13,22 @@ com.sun.jini.start {
     ps = System.getProperty("path.separator");
 
     serviceDescriptors = new ServiceDescriptor[] {
-
-            new SorcerServiceDescriptor(
-            "" + Resolver.resolveRelative("org.dancres.blitz:blitz-dl") +
-            " " + Resolver.resolveRelative("org.dancres.blitz:blitzui"),
-            policy,
-            ConfigUtil.concat(new Object[] {
-                Resolver.resolveAbsolute("org.dancres.blitz:blitz"), ps,
-                Resolver.resolveAbsolute("org.dancres.blitz:blitzui"), ps,
-                Resolver.resolveAbsolute("com.sleepycat:je:4.1.21"), ps,
-                Resolver.resolveAbsolute("net.jini.lookup:serviceui"), ps,
-                Resolver.resolveAbsolute("org.apache.river:outrigger-dl"), ps,
-                Resolver.resolveAbsolute("net.jini:jsk-platform")
+        new SorcerServiceDescriptor(
+            Booter.resolveCodebase(new String[]{
+                "org.dancres.blitz:blitz-dl",
+ 			    "org.dancres.blitz:blitzui"
             }),
-            "org.dancres.blitz.remote.BlitzServiceImpl",
-            new String[] { home + "${/}configs${/}blitz${/}configs${/}blitz.config" }),
-
-            new SorcerServiceDescriptor(
-            "" + Resolver.resolveRelative("org.sorcersoft.sorcer:locker"),
             policy,
-            ConfigUtil.concat(new Object[] {
-                Resolver.resolveAbsolute("org.sorcersoft.sorcer:locker"), ps,
-                Resolver.resolveAbsolute("org.jgroups:jgroups:2.12.1.Final"), ps,
-                Resolver.resolveAbsolute("org.dancres.blitz:blitzui"), ps,
-                Resolver.resolveAbsolute("org.apache.river:outrigger-dl"), ps,
-                Resolver.resolveAbsolute("net.jini:jsk-platform")
-
+            Booter.resolveClasspath(new String[]{
+            	"org.dancres.blitz:blitz",
+            	"org.dancres.blitz:blitzui",
+            	"com.sleepycat:je",
+            	"net.jini.lookup:serviceui",
+            	"org.apache.river:outrigger-dl",
+            	"net.jini:jsk-platform"
             }),
-            "org.dancres.blitz.jini.lockmgr.ServerImpl",
-             new String[] { home + "${/}configs${/}blitz${/}configs${/}lockmgr.config" })
+	        "org.dancres.blitz.remote.BlitzServiceImpl",
+          	new String[] { home + "/configs/blitz/configs/blitz.config" }
+        )
     };
 }
-     
