--- a/tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/config/services.config
+++ b/tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/config/services.config
@@ -22,7 +22,7 @@ com.sun.jini.start {
                 runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
-			new String[] { "config/adder-prv.config" }
+			new String[] { "classpath:config/adder-prv.config" }
         ),
 
 		new SorcerServiceDescriptor(
@@ -37,7 +37,7 @@ com.sun.jini.start {
                 runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
-			new String[] { "config/multiplier-prv.config" }
+			new String[] { "classpath:config/multiplier-prv.config" }
         ),
 
         new SorcerServiceDescriptor(
@@ -52,7 +52,7 @@ com.sun.jini.start {
 			    runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
-			new String[] { "config/divider-prv.config" }
+			new String[] { "classpath:config/divider-prv.config" }
         ),
 
         new SorcerServiceDescriptor(
@@ -67,7 +67,7 @@ com.sun.jini.start {
                 runtimeClasspath
             }),
             "sorcer.core.provider.ServiceTasker",
-            new String[] { "config/subtractor-prv.config" }
+            new String[] { "classpath:config/subtractor-prv.config" }
         )
     };
 }
