Added rio scripts for windows, rio almost works from distro on windows

--- a/sos/sos-env/src/main/resources/META-INF/maven/repolayout.properties
+++ b/sos/sos-env/src/main/resources/META-INF/maven/repolayout.properties
@@ -4,4 +4,5 @@ org.apache.river = river
 org.rioproject = rio
 org.rioproject.resolver = rio-resolver
 org.sorcersoft.sorcer = sorcer
+org.sorcersoft.blitz = blitz
 org.sorcersoft.sigar = sigar
