Refactored Installer in sos-env, now works with Rio in Distro, examples get deployed correctly

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -285,6 +285,11 @@
             <artifactId>maven-model</artifactId>
             <version>3.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${v.slf4j}</version>
+        </dependency>
     </dependencies>
 
     <build>
