--- a/sos-providers/cataloger/cataloger-api/pom.xml
+++ b/sos-providers/cataloger/cataloger-api/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>cataloger-api</artifactId>
+    <name>SORCER OS :: providers :: cataloger ::  api</name>
 
     <dependencies>
         <dependency>
