--- a/sos/sos-env/pom.xml
+++ b/sos/sos-env/pom.xml
@@ -42,7 +42,12 @@
                             sorcer.service;version=${project.version},
                             org.apache.commons.io;version=2.4,
                             org.apache.commons.lang3;version=3.1,
-                            org.slf4j
+                            org.slf4j,
+                            javax.xml.namespace,
+                            javax.xml.parsers,
+                            javax.xml.xpath,
+                            org.w3c.dom,
+                            org.xml.sax
                         </Import-Package>
                     </instructions>
                 </configuration>
