Fixed communication problems between providers provisioned using rio and requestors run manually, fixed bug in ArtherResolver

--- a/configs/rio/logging/rio-logging.properties
+++ b/configs/rio/logging/rio-logging.properties
@@ -13,7 +13,7 @@ handlers=org.rioproject.logging.jul.FileHandler, java.util.logging.ConsoleHandle
 
 # Default global logging level.
 # Loggers and Handlers may override this level
-.level=DEBUG
+.level=INFO
 
 #===========================================================
 # Handler specific properties.
@@ -79,18 +79,18 @@ org.rioproject.logging.RioLogFormatter.WARNING=LIGHT_YELLOW
 # Loggers
 #===========================================================
 org.rioproject.cybernode.level=CONFIG
-org.rioproject.cybernode.loader.level=FINE
+org.rioproject.cybernode.loader.level=INFO
 org.rioproject.config.level=INFO
 org.rioproject.resources.servicecore.level=INFO
 org.rioproject.system.level=CONFIG
 org.rioproject.cybernode.ServiceBeanLoader.level=INFO
 org.rioproject.jsb.level=INFO
 
-org.rioproject.monitor.level = FINER
-org.rioproject.monitor.sbi.level = FINE
-org.rioproject.monitor.provision.level = FINE
+org.rioproject.monitor.level = INFO
+org.rioproject.monitor.sbi.level = INFO
+org.rioproject.monitor.provision.level = INFO
 org.rioproject.monitor.selector.level = OFF
-org.rioproject.monitor.services.level = FINE
+org.rioproject.monitor.services.level = INFO
 org.rioproject.resolver.aether.level = OFF
 
 org.rioproject.gnostic.level = INFO
