--- a/sos/sorcer-api/pom.xml
+++ b/sos/sorcer-api/pom.xml
@@ -30,6 +30,18 @@
             <artifactId>jsk-lib</artifactId>
             <version>${v.jini}</version>
         </dependency>
+<!-- added for rio compat -->
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio-api</artifactId>
+            <version>${v.rio}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.jini.lookup</groupId>
+            <artifactId>serviceui</artifactId>
+            <version>${v.jini}</version>
+        </dependency>
+<!-- -->
     </dependencies>
 
 
