--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -290,6 +290,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>${v.slf4j}</version>
         </dependency>
+        <dependency>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
 
     <build>
