Fixes in SpaceAccessor and SpaceTaker - now providers gently wait for Space to come back when it is gone and then reconnect

--- a/configs/blitz/configs/start-blitz-all.config
+++ b/configs/blitz/configs/start-blitz-all.config
@@ -15,6 +15,32 @@ com.sun.jini.start {
     serviceDescriptors = new ServiceDescriptor[] {
         new SorcerServiceDescriptor(
             Booter.resolveCodebase(new String[]{
+                "org.sorcersoft.blitz:blitz-common",
+                "org.sorcersoft.blitz:blitz-proxy",
+                "net.jini.lookup:jmx-lookup",
+                "org.apache.river:outrigger-dl",
+ 			    "org.sorcersoft.blitz:blitz-ui"
+            }),
+            policy,
+            Booter.resolveClasspath(new String[]{
+                "org.sorcersoft.blitz:blitz-common",
+                "org.sorcersoft.blitz:blitz-service",
+                "org.sorcersoft.blitz:blitz-proxy",
+            	"org.sorcersoft.blitz:blitz-ui",
+            	"org.apache.river:outrigger-dl",
+            	"com.sleepycat:je",
+                "net.jini.lookup:jmx-lookup",
+            	"net.jini.lookup:serviceui",
+            	"net.jini:jsk-lib",
+            	"net.jini:jsk-platform"
+            }),
+	        "org.dancres.blitz.remote.BlitzServiceImpl",
+          	new String[] { home + "/configs/blitz/configs/blitz.config" }
+        )
+
+/*    OLD non-mavenized Blitz
+      new SorcerServiceDescriptor(
+            Booter.resolveCodebase(new String[]{
                 "org.dancres.blitz:blitz-dl",
  			    "org.dancres.blitz:blitzui"
             }),
@@ -29,6 +55,6 @@ com.sun.jini.start {
             }),
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
           	new String[] { home + "/configs/blitz/configs/blitz.config" }
-        )
+        )*/
     };
 }
