add cglib to dependencies

--- a/tools/dependencies/pom.xml
+++ b/tools/dependencies/pom.xml
@@ -180,5 +180,10 @@
             <artifactId>cybernode-service</artifactId>
             <version>${v.rio}</version>
         </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>2.1_3</version>
+        </dependency>
     </dependencies>
 </project>
