ProviderProxy: fix import; fix jmx-lookup version

--- a/sos/sos-env/src/main/resources/META-INF/maven/versions.properties
+++ b/sos/sos-env/src/main/resources/META-INF/maven/versions.properties
@@ -1,6 +1,6 @@
 #the key is either groupId_artifactId or just the groupId
 net.jini = ${v.jini}
-net.jini.lookup = ${v.jini}
+net.jini.lookup = 2.1
 org.apache.river = ${v.jini}
 org.sorcersoft.blitz = ${v.blitz}
 org.sorcersoft.sigar = ${v.sigar}
