add bean-like interface to DatabaseProvider

--- a/sos-providers/dbp/dbp-prv/src/main/resources/config/dbp.config
+++ b/sos-providers/dbp/dbp-prv/src/main/resources/config/dbp.config
@@ -18,7 +18,10 @@ sorcer.core.provider.ServiceProvider {
     //name = "Database Storage";
     name = SorcerEnv.getDatabaseStorerName();
     
-    publishedInterfaces = new Class[] { sorcer.service.DatabaseStorer.class };
+    publishedInterfaces = new Class[] {
+    	sorcer.core.provider.dbp.IDatabaseProvider.class,
+    	sorcer.service.DatabaseStorer.class
+    	};
     description = "SORCER object storage service";
     entries = new Entry[] {
 	    new Comment("Welcome to SORCER storage system!"), 
